css fix width on mobile

--- a/src/components/singlecard.css
+++ b/src/components/singlecard.css
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   gap: 45px;
-  width: 400px;
+  width: 375px;
   height: auto;
   background-color: aquamarine;
   color: black;
